Organizando os Dados

--- a/Ep 0.1/dados_faltantes.ipynb
+++ b/Ep 0.1/dados_faltantes.ipynb
@@ -117,7 +117,7 @@
    ],
    "source": [
     "# Dados\n",
-    "ds = pd.read_csv('svbr.csv', sep=';')\n",
+    "ds = pd.read_csv('../data/svbr.csv', sep=';')\n",
     "ds.head()"
    ]
   },
