--- a/Ep 0.2/teste_e_treino.ipynb
+++ b/Ep 0.2/teste_e_treino.ipynb
@@ -161,7 +161,7 @@
    ],
    "source": [
     "# Dados\n",
-    "ds = pd.read_csv('admission.csv', sep=';')\n",
+    "ds = pd.read_csv('../data/admission.csv', sep=';')\n",
     "ds.head()"
    ]
   },
@@ -316,20 +316,20 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 314, 103, 2, 2.0,\n",
-       "        3.0, 8.21, 0],\n",
-       "       [0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 316, 104, 3, 3.0,\n",
-       "        3.5, 8.0, 1],\n",
-       "       [0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 308, 101, 2, 3.0,\n",
-       "        4.0, 7.9, 0],\n",
-       "       [0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 322, 110, 3, 3.5,\n",
-       "        2.5, 8.67, 1],\n",
-       "       [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 302, 102, 1, 2.0,\n",
+       "array([[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 302, 102, 1, 2.0,\n",
        "        1.5, 8.0, 0],\n",
        "       [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 324, 107, 4, 4.0,\n",
        "        4.5, 8.87, 1],\n",
        "       [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 337, 118, 4, 4.5,\n",
-       "        4.5, 9.65, 1]], dtype=object)"
+       "        4.5, 9.65, 1],\n",
+       "       [0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 308, 101, 2, 3.0,\n",
+       "        4.0, 7.9, 0],\n",
+       "       [0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 322, 110, 3, 3.5,\n",
+       "        2.5, 8.67, 1],\n",
+       "       [0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 330, 115, 5, 4.5,\n",
+       "        3.0, 9.34, 1],\n",
+       "       [0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 321, 109, 3, 3.0,\n",
+       "        4.0, 8.2, 1]], dtype=object)"
       ]
      },
      "execution_count": 7,
