--- a/Ep 0.3/normalizacao.ipynb
+++ b/Ep 0.3/normalizacao.ipynb
@@ -160,7 +160,7 @@
    ],
    "source": [
     "# Dados\n",
-    "ds = pd.read_csv('admission.csv', sep=';')\n",
+    "ds = pd.read_csv('../data/admission.csv', sep=';')\n",
     "ds.head()"
    ]
   },
@@ -296,20 +296,20 @@
     {
      "data": {
       "text/plain": [
-       "array([[1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 324, 107, 4, 4.0,\n",
+       "array([[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 337, 118, 4, 4.5,\n",
+       "        4.5, 9.65, 1],\n",
+       "       [0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 330, 115, 5, 4.5,\n",
+       "        3.0, 9.34, 1],\n",
+       "       [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 324, 107, 4, 4.0,\n",
        "        4.5, 8.87, 1],\n",
        "       [0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 322, 110, 3, 3.5,\n",
        "        2.5, 8.67, 1],\n",
-       "       [0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 330, 115, 5, 4.5,\n",
-       "        3.0, 9.34, 1],\n",
-       "       [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 314, 103, 2, 2.0,\n",
-       "        3.0, 8.21, 0],\n",
+       "       [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 302, 102, 1, 2.0,\n",
+       "        1.5, 8.0, 0],\n",
        "       [0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 308, 101, 2, 3.0,\n",
        "        4.0, 7.9, 0],\n",
-       "       [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 337, 118, 4, 4.5,\n",
-       "        4.5, 9.65, 1],\n",
-       "       [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 302, 102, 1, 2.0,\n",
-       "        1.5, 8.0, 0]], dtype=object)"
+       "       [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 314, 103, 2, 2.0,\n",
+       "        3.0, 8.21, 0]], dtype=object)"
       ]
      },
      "execution_count": 6,
@@ -342,7 +342,15 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 2.44948974, -0.40824829, -0.40824829,  0.        , -0.40824829,\n",
+       "array([[-0.40824829, -0.40824829, -0.40824829,  0.        , -0.40824829,\n",
+       "         0.        ,  2.44948974, -0.40824829, -0.40824829,  1.52714907,\n",
+       "         1.62834737,  0.76376262,  1.15470054,  1.17873792,  1.58876185,\n",
+       "         0.8660254 ],\n",
+       "       [-0.40824829, -0.40824829, -0.40824829,  0.        ,  2.44948974,\n",
+       "         0.        , -0.40824829, -0.40824829, -0.40824829,  0.91378592,\n",
+       "         1.13984316,  1.52752523,  1.15470054, -0.2773501 ,  1.08983085,\n",
+       "         0.8660254 ],\n",
+       "       [ 2.44948974, -0.40824829, -0.40824829,  0.        , -0.40824829,\n",
        "         0.        , -0.40824829, -0.40824829, -0.40824829,  0.38804607,\n",
        "        -0.16283474,  0.76376262,  0.64951905,  1.17873792,  0.33338707,\n",
        "         0.8660254 ],\n",
@@ -350,25 +358,17 @@
        "         0.        , -0.40824829, -0.40824829, -0.40824829,  0.21279946,\n",
        "         0.32566947,  0.        ,  0.14433757, -0.76271277,  0.01149611,\n",
        "         0.8660254 ],\n",
-       "       [-0.40824829, -0.40824829, -0.40824829,  0.        ,  2.44948974,\n",
-       "         0.        , -0.40824829, -0.40824829, -0.40824829,  0.91378592,\n",
-       "         1.13984316,  1.52752523,  1.15470054, -0.2773501 ,  1.08983085,\n",
-       "         0.8660254 ],\n",
        "       [-0.40824829, -0.40824829, -0.40824829,  0.        , -0.40824829,\n",
-       "         0.        , -0.40824829, -0.40824829,  2.44948974, -0.488187  ,\n",
-       "        -0.81417368, -0.76376262, -1.37120689, -0.2773501 , -0.72885312,\n",
+       "         0.        , -0.40824829,  2.44948974, -0.40824829, -1.53966668,\n",
+       "        -0.97700842, -1.52752523, -1.37120689, -1.73343811, -1.06683864,\n",
        "        -1.15470054],\n",
        "       [-0.40824829, -0.40824829,  2.44948974,  0.        , -0.40824829,\n",
        "         0.        , -0.40824829, -0.40824829, -0.40824829, -1.01392684,\n",
        "        -1.13984316, -0.76376262, -0.36084392,  0.69337525, -1.22778412,\n",
        "        -1.15470054],\n",
        "       [-0.40824829, -0.40824829, -0.40824829,  0.        , -0.40824829,\n",
-       "         0.        ,  2.44948974, -0.40824829, -0.40824829,  1.52714907,\n",
-       "         1.62834737,  0.76376262,  1.15470054,  1.17873792,  1.58876185,\n",
-       "         0.8660254 ],\n",
-       "       [-0.40824829, -0.40824829, -0.40824829,  0.        , -0.40824829,\n",
-       "         0.        , -0.40824829,  2.44948974, -0.40824829, -1.53966668,\n",
-       "        -0.97700842, -1.52752523, -1.37120689, -1.73343811, -1.06683864,\n",
+       "         0.        , -0.40824829, -0.40824829,  2.44948974, -0.488187  ,\n",
+       "        -0.81417368, -0.76376262, -1.37120689, -0.2773501 , -0.72885312,\n",
        "        -1.15470054]])"
       ]
      },
