--- a/Ep 0.5/regressao_Multipla.ipynb
+++ b/Ep 0.5/regressao_Multipla.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regressão Linear - Machine Learning 04"
+    "# Regressão Linear Múltipla - Machine Learning 05"
    ]
   },
   {
