Regressão de Vetor Suporte - Machine Learning 08

--- a/Ep 0.8/regressao_vetor_suporte.ipynb
+++ b/Ep 0.8/regressao_vetor_suporte.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Regressão Polinomial - Machine Learning 07**"
+    "# **Regressão de Vetor Suporte - Machine Learning 08**"
    ]
   },
   {
